# tesserae-device-photopainter-7.3-bin

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
include/: app_config.h  secrets.example.h
src/: CMakeLists.txt  epd_driver.c  epd_driver.h  heartbeat.c  heartbeat.h  idf_component.yml  image_decoder.c  image_decoder.h  image_fetcher.c  image_fetcher.h  main.c  mqtt_config.c  mqtt_config.h  mqtt_handler.c  mqtt_handler.h  pmic.c  pmic.h  provisioning.c  provisioning.h  rest_handler.c  rest_handler.h  splash.c  splash.h  wifi_manager.c  wifi_manager.h
tools/: gen_splash.py  release.sh
