idf_component_register(
    SRCS
        "main.c"
        "epd_driver.c"
        "heartbeat.c"
        "image_decoder.c"
        "image_fetcher.c"
        "mqtt_config.c"
        "mqtt_handler.c"
        "pmic.c"
        "provisioning.c"
        "rest_handler.c"
        "splash.c"
        "wifi_manager.c"
    INCLUDE_DIRS
        "."
        "../include"
    EMBED_FILES
        "../assets/splash_logo.bin"
        "../assets/splash_portal.bin"
        "../assets/splash_paired.bin"
    REQUIRES
        driver
        esp_driver_i2c
        esp_driver_usb_serial_jtag
        esp_event
        esp_http_client
        esp_http_server
        esp_netif
        esp_wifi
        esp-tls
        json
        mqtt
        nvs_flash
        mbedtls
        lwip
        mdns
)
